force-app/main/default/objects/Models__c/Models__c.object-meta.xml
<CustomObject>
    <description>List of Models associated with an OEM Make</description>
    <label>Model</label>
    <nameField>
        <displayFormat>MODL{000000}</displayFormat>
        <label>Models Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>