force-app/main/default/objects/Models__c/fields/Activator_MakeId__c.field-meta.xml
<CustomField>
    <fullName>Activator_MakeId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Make record in the Activator system this Model is associated with</inlineHelpText>
    <label>Activator Make Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>