force-app/main/default/objects/Models__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>OEM that makes this model</inlineHelpText>
    <label>Make</label>
    <referenceTo>Makes__c</referenceTo>
    <relationshipLabel>Models</relationshipLabel>
    <relationshipName>Models</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>