force-app/main/default/objects/Models__c/fields/ModelName__c.field-meta.xml
<CustomField>
    <fullName>ModelName__c</fullName>
    <inlineHelpText>Name of the Vehicle model</inlineHelpText>
    <label>Model Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>